--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@jzolago/vuetify-number-input": "^0.4.0",
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^4.0.4",
     "vue": "^2.5.2",
