--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^4.0.4",
     "vue": "^2.5.2",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.4.2"
   },
