--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.4.2"
   },
   "devDependencies": {
